FenicsPDE/MOND/jupyternbs/dolfin_reports/jitfailure-dolfin_expression_89769e0511ee3b6dc58c9b00b1469686/error.log
/tmp/tmpmanvuzsl/dolfin_expression_89769e0511ee3b6dc58c9b00b1469686.cpp: In member function ‘virtual void dolfin::dolfin_expression_89769e0511ee3b6dc58c9b00b1469686::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const’:
/tmp/tmpmanvuzsl/dolfin_expression_89769e0511ee3b6dc58c9b00b1469686.cpp:76:76: error: expected ‘)’ before ‘;’ token
           values[0] = mgb*a0*exp(-(pow(x[0],2) + pow(x[1],2) + pow(x[2],2));
                                                                            ^
/tmp/tmpmanvuzsl/dolfin_expression_89769e0511ee3b6dc58c9b00b1469686.cpp: In member function ‘virtual double dolfin::dolfin_expression_89769e0511ee3b6dc58c9b00b1469686::get_property(std::__cxx11::string) const’:
/tmp/tmpmanvuzsl/dolfin_expression_89769e0511ee3b6dc58c9b00b1469686.cpp:88:11: warning: this ‘if’ clause does not guard... [-Wmisleading-indentation]
           if (name == "a0") return a0;          if (name == "ms") return ms;          if (name == "mgb") return mgb;          if (name == "G") return G;          if (name == "ly") return ly;          if (name == "kp") return kp;          if (name == "radius_tot") return radius_tot;          if (name == "volume_out") return volume_out;          if (name == "x_close") return x_close;          if (name == "y_close") return y_close;          if (name == "z_close") return z_close;          if (name == "radius_close") return radius_close;          if (name == "eps") return eps;          if (name == "stand_dev") return stand_dev;          if (name == "p") return p;
           ^~
/tmp/tmpmanvuzsl/dolfin_expression_89769e0511ee3b6dc58c9b00b1469686.cpp:88:49: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
           if (name == "a0") return a0;          if (name == "ms") return ms;          if (name == "mgb") return mgb;          if (name == "G") return G;          if (name == "ly") return ly;          if (name == "kp") return kp;          if (name == "radius_tot") return radius_tot;          if (name == "volume_out") return volume_out;          if (name == "x_close") return x_close;          if (name == "y_close") return y_close;          if (name == "z_close") return z_close;          if (name == "radius_close") return radius_close;          if (name == "eps") return eps;          if (name == "stand_dev") return stand_dev;          if (name == "p") return p;
                                                 ^~
